# ecg_classifier

./: .gitignore  AnalysisData.py  MANIFEST.in  Model.py  README.md  Readme.md  log.txt  main.py  requirements.txt  setup.cfg
Scripts/: get_datasets.sh  get_virtual.sh
ecg_classifier/: __init__.py  analysis_data.py  main.py  model.py
ecg_classifier/configs/: config.yaml
ecg_classifier/configs/criterion/: cr.yaml
ecg_classifier/configs/dataset/: ds.yaml
ecg_classifier/configs/early_stopping/: es.yaml
ecg_classifier/configs/model/: model.yaml  resnet.yaml
ecg_classifier/configs/optimizer/: adam.yaml
ecg_classifier/configs/scheduler/: scheduler.yaml
ecg_classifier/data/: __init__.py  analysis_data.py
ecg_classifier/module/: __init__.py  callbacks.py  metrics.py  models.py  predict.py
ecg_classifier/utils/: __init__.py  data_stat.py  device.py  seed.py
scripts/: download_datasets.sh  setup_venv.sh
