[metadata]
name = ecg_classifier
version = 0.1.0
author = Pavlov Matvey
author_email = mpavlov375@gmail.com
description = Classification ecg signals with PyTorch
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/EntryFrager/ECG
classifiers =
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.12
install_requires =
    torch>=2.6.0
    numpy>=1.26.0
    pandas>=2.1.0
    wfdb>=4.3.0
    scikit-learn>=1.4.0
    tensorboard>=2.19.0
    hydra_core>=1.3.2
include_package_data = True

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
    ecg_classifier = ecg_classifier.main:main
